--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --small-text-color:#757575;
     --contacts-text-color:#757575;
     --icons-color-active:#2196F3;
+    --title-color: #FFF;
 }
 
 * {
@@ -126,32 +127,118 @@ letter-spacing: 0.28px;
   gap: 20px;
 }
  
-.mail , .phone{
+.mail , .phone-number{
 width: 20px;
 height: 16px;
 flex-shrink: 0;
 fill: #757575;
 }
 
-.mail:hover, .mail:focus{
-  color: var(--icons-color-active);
-}
-
-.contacts:hover, .contacts:focus{
-  color: var(--link-active-color);
-}
-
 .studio-activ:hover , .studio-activ:focus,
 .portfolio-header:hover , .portfolio-header:focus,
-.contacts-header:hover, .contacts-header:focus{
+.contacts-header:hover, .contacts-header:focus,
+.contacts:hover, .contacts:focus,.mail:hover, .phone-number:hover,
+.mail:focus, .phone-number:focus{
   color: var(--link-active-color);
 }
 
 
-/* ------Main------- */
+/* -----------Main--------------- */
+
+
 
 .hero-section{
     background: #2F303A;
     height: 600px;
     flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+    gap: 30px;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.4)) , url(/images/background-image.jpg);
+
+}
+
+/* Main-title+button */
+
+.title{
+  color: var(--title-color);
+  text-align: center;
+  font-family: var(--text-font-family);
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 60px; /* 136.364% */
+  letter-spacing: 2.64px;
+  text-transform: uppercase;
+  width: 696px;
+}
+
+.button-book-a-service{
+  width: 200px;
+  height: 50px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border: transparent;
+  cursor: pointer;
+}
+
+.request{
+  color: #FFF;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px; /* 187.5% */
+  letter-spacing: 0.96px;
+  cursor: pointer;
+}
+
+
+ /*---Qualities--- */
+
+ .qualities-list {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-top: 270px;
+ padding: 215px;
+}
+.qualities-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  
+}
+
+.qualities:last-child {
+  margin-right: 0;
+}
+.qualities-content {
+  margin-top: 10px;
+  width: 270px;
+}
+
+.qualities-title {
+  color: var(--text-color);
+  font-family: var(--text-font-family);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+}
+.qualities-content {
+  color: var(--small-text-color);
+  font-family: var(--text-font-family);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 171.429% */
+  letter-spacing: 0.42px;
 }
