--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,14 @@ line-height: normal;
 letter-spacing: 0.28px;
 }
 
+.header-contacts{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 350px;
+  gap: 40px;
+}
+
 .contacts {
   color: var(--contacts-text-color);
   text-decoration: none;
@@ -117,19 +125,13 @@ letter-spacing: 0.28px;
   font-size: 14px;
   line-height: 1.18;
   letter-spacing: 2%;
+  gap: 10px;
+  display: flex;
 }
 
-.header-contacts{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-left: 350px;
-  gap: 20px;
-}
- 
 .mail , .phone-number{
-width: 20px;
-height: 16px;
+width: 19px;
+height: 17px;
 flex-shrink: 0;
 fill: #757575;
 }
@@ -205,8 +207,9 @@ fill: #757575;
   display: flex;
   justify-content: center;
   width: 100%;
-  padding-top: 270px;
- padding: 215px;
+  padding-top: 30px;
+ padding-right: 215px;
+ padding-left: 215px;
 }
 .qualities-list {
   display: flex;
@@ -241,4 +244,56 @@ fill: #757575;
   font-weight: 400;
   line-height: 24px; /* 171.429% */
   letter-spacing: 0.42px;
+}
+
+.qualities-icons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-top: 94px;
+}
+
+.qualities-icon{
+  width: 70px;
+  height: 70px;
+  flex-shrink: 0;
+  gap: 30px;
+}
+
+.qualities-rect{
+  border-radius: 4px;
+  background-color: #F5F4FA;
+  width: 270px;
+  height: 120px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* ------What we do section------ */
+
+.what-we-do-container{
+  margin-top: 94px;
+}
+
+.images-what-we-do{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 30px;
+  margin-top: 50px;
+}
+
+.what-we-do{
+  color:var(--text-color);
+  text-align: center;
+  font-family: var(--text-font-family);
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.08px;
 }
