--- a/css/styles.css
+++ b/css/styles.css
@@ -141,8 +141,9 @@ fill: #757575;
 .studio-activ:hover , .studio-activ:focus,
 .portfolio-header:hover , .portfolio-header:focus,
 .contacts-header:hover, .contacts-header:focus,
-.contacts:hover, .contacts:focus,.mail:hover, .phone-number:hover,
-.mail:focus, .phone-number:focus{
+.header-contacts-phone:hover, .header-contacts-phone:focus,
+.header-contacts-mail:hover, .header-contacts-mail:focus
+{
   color: var(--link-active-color);
 }
 
