--- a/css/styles.css
+++ b/css/styles.css
@@ -270,10 +270,11 @@ fill: #757575;
   align-items: center;
 }
 
-/* ------What we do section------ */
+/* -------What we do section------ */
 
 .what-we-do-container{
   margin-top: 94px;
+  margin-bottom: 94px;
 }
 
 .images-what-we-do{
@@ -295,3 +296,71 @@ fill: #757575;
   line-height: normal;
   letter-spacing: 1.08px;
 }
+
+/* --------Our Team-------- */
+
+.our-team{
+  background-color:#F5F4FA;
+
+}
+
+.title-our-team{
+  color: var(--text-color);
+  text-align: center;
+  font-family: var(--text-font-family);
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.08px;
+  padding-top: 94px;
+
+}
+
+.team-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  gap: 30px;
+}
+
+.card{
+  width: 270px;
+  flex-shrink: 0;
+  border-radius: 0px 0px 4px 4px;
+  background: #FFF;
+  /* material shadow v1 */
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+  0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  margin-bottom: 94px;
+}
+
+.our-team-member{
+  color: #212121;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.48px;
+  padding-top: 30px;
+}
+
+
+.our-team-job{
+  display: flex;
+  justify-content: center;
+  color: var(--small-text-color);
+  text-align: center;
+  font-family: var(--text-font-family);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.48px;
+  padding-top: 10px;
+}
+
+
