--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ fill: #757575;
     align-items:center;
     flex-direction: column;
     gap: 30px;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.4)) , url('/images/background-image.jpg');
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.4)) , url('images/background-image.jpg');
 
 }
 
