--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ fill: #757575;
 
 .hero-section{
     background: #2F303A;
+    width: 100%;
     height: 600px;
     flex-shrink: 0;
     display: flex;
@@ -164,8 +165,8 @@ fill: #757575;
     align-items:center;
     flex-direction: column;
     gap: 30px;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.4)) , url('images/background-image.jpg');
-
+    background-color: rgba(47, 48, 58, 0.4);
+  background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/background-image.jpg");
 }
 
 /* Main-title+button */
